--- a/app/globals.css
+++ b/app/globals.css
@@ -111,3 +111,6 @@
 .animate-float {
   animation: float-snowflake 4s ease-in-out infinite;
 }
+
+/* idk why i added this 
+this comment will be here only for the next HISABI APP */
